# James-Hippler-SDK

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  codecov.yml  design.md  endpoints.md  pyproject.toml  querying.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
docs/: README.md  endpoints.md  querying.md
examples/: demo_async.py  demo_helpers.py  demo_sync.py  sample_output.md
src/lotr_sdk/: __init__.py  _pagination.py  _transport.py  client.py  config.py  exceptions.py  models.py  query.py  version.py
src/lotr_sdk/_pagination/: __init__.py  async_.py  sync.py
src/lotr_sdk/_transport/: __init__.py  async_.py  base.py  sync.py
src/lotr_sdk/client/: __init__.py  aio.py  async_.py  base.py  sync.py
src/lotr_sdk/fields/: __init__.py  quote.py
src/lotr_sdk/models/: __init__.py  base.py  movie.py  movie_field.py  movie_with_quotes.py  page.py  quote.py
src/lotr_sdk/pagination/: __init__.py  aio.py
src/lotr_sdk/query/: __init__.py  builder.py  field_filter.py  flags.py  serialization.py
src/lotr_sdk/resources/: __init__.py  base.py  movies.py  quotes.py
src/lotr_sdk/resources/aio/: __init__.py  movies.py  quotes.py
src/lotr_sdk/resources/async_/: __init__.py  movies.py  quotes.py
src/lotr_sdk/resources/sync/: __init__.py  movies.py  quotes.py
src/lotr_sdk/transport/: __init__.py  aio.py  base.py  sync.py
tests/: conftest.py  test_smoke.py
tests/integration/: test_live_api.py
tests/unit/: test_client.py  test_config.py  test_exceptions.py  test_fields.py  test_logging.py  test_models.py  test_parity.py  test_query.py  test_transport.py
