[project]
name = "lotr-sdk"
version = "0.1.0"
description = "A clean, fully typed Python SDK for The One API (Lord of the Rings)."
authors = [{ name = "James Hippler", email = "hipplerj@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["lord-of-the-rings", "the-one-api", "sdk", "client", "httpx"]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
]

[project.urls]
Homepage = "https://github.com/Site404NotFound/James-Hippler-SDK"
Repository = "https://github.com/Site404NotFound/James-Hippler-SDK"

[tool.poetry]
packages = [{ include = "lotr_sdk", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2"
pytest-asyncio = ">=0.23"
pytest-cov = ">=5.0"
respx = ">=0.21"
ruff = ">=0.5"
mypy = ">=1.10"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "RUF", # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
files = ["src"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: hits the live API; requires THE_ONE_API_KEY (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
source = ["lotr_sdk"]
branch = true

[tool.coverage.report]
show_missing = true
